added new styles

--- a/css/style.css
+++ b/css/style.css
@@ -4,29 +4,133 @@
     padding: 0;
 }
 
+.content {
+    animation: showContent 2.5s 1 ease-out;
+    -moz-animation: showContent 2.5s 1 ease-out;
+    -webkit-animation: showContent 2.5s 1 ease-out;
+    -o-animation: showContent 2.5s 1 ease-out;
+}
+
+@keyframes showContent{
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+@keyframes enlarge {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.2);
+    }
+}
+
+
 section {
+    background-color: black;
+    color: white;
+    min-height: 100vh;
+}
+
+.container {
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    height: 80vh;
+    margin: 0 auto;
+    width:100%;
+    height: 100%;
+    max-width: 51.25rem;
+}
+
+img {
+    border-radius:100%;
+    margin-top: 1.7rem;
+}
+
+img:hover {
+    animation: enlarge 2.5s 1 linear forwards;
+    -moz-animation: enlarge 2.5s 1 linear;
+    -webkit-animation: enlarge 2.5s 1 linear forwards;
+    -o-animation: enlarge 2.5s 1 linear;
 }
 
 h1 {
-    font-family: Arial;
+    font-family: "Arial Black", Gadget, sans-serif;
+    margin-top: 2rem;
+    font-size: 2rem;
+    margin-left: 0.8rem;
+    color: red;
+    text-transform: uppercase;
+}
+
+span {
+    color: white;
+    display: inline-block;
+    font-size: 2.6875rem;
+}
+
+span:hover {
+    transform: scale(1.1);
+    transition: 1s;
+}
+
+@media all and (min-width:400px){
+    img {
+        margin-top: 4rem;
+    }
+    h1 {
+        margin-top: 3.125rem;
+        font-size: 2.5rem;
+    }
+    span {
+        font-size: 3rem;
+    }
 }
 
 .joke {
     max-width: 50vw;
-    margin-top:0.5rem;
-    font-style: italic;
+    margin:2rem 0;
+    font-family: "Comic Sans MS", cursive, sans-serif;
     text-align: center;
+
 }
 
 .generate {
     margin-top: 1rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     border-radius: 0.4rem;
-    padding: 0.6rem 0.6rem;
+    padding: 0.9rem 0.9rem;
+    outline: none;
+    font-weight: 700;
+    background-color: red;
+    color:white;
+    border:none;
+    align-self: flex-end;
+    margin: 1.25rem 1.875rem;
+}
+
+.generate:hover {
+    background-color: white;
+    color: red;
+    transform: scale(1.2);
+    transition: 1.2s;
+}
+
+.generate:active{
+    background-color: red;
+    color: white;
+    padding: 1.2rem 1.2rem;
+    font-size: 1.7rem;
+}
+
+.generate:focus {
+    outline:none;
+}
+.generate::-moz-focus-inner {
+    border:0;
 }
